--- a/studiop-brath/src/components/sass/buttons.scss
+++ b/studiop-brath/src/components/sass/buttons.scss
@@ -1,28 +1,28 @@
-.btnRed{
-    background-color: rgba(166, 33, 32, 1);
-    border: 1px solid #fff;
-    border-radius: 2em;
-    padding: 0.7em 3em;
-    font-size: 1em;
-    text-align: center;
-    color: #fff;
-    font-weight: 400;
+.btnRed {
+  background-color: rgba(166, 33, 32, 1);
+  border: 1px solid #fff;
+  border-radius: 2em;
+  padding: 0.7em 3em;
+  font-size: 1em;
+  text-align: center;
+  color: #fff;
+  font-weight: 400;
 
-    &:hover{
-        cursor: pointer;
-    }
+  &:hover {
+    cursor: pointer;
+  }
 }
 
-.btnWhite{
-    border: 1px solid #FF0000;
-    border-radius: 2em;
-    padding: 0.7em 3em;
-    margin-top: 2em;
-    font-size: 1em;
-    background-color: #fff;
-    color: #000;
+.btnWhite {
+  border: 1px solid #ff0000;
+  border-radius: 2em;
+  padding: 0.7em 3em;
+  margin-top: 2em;
+  font-size: 1em;
+  background-color: #fff;
+  color: #000;
 
-    &:hover{
-        cursor: pointer;
-    }
+  &:hover {
+    cursor: pointer;
+  }
 }
