--- a/studiop-brath/src/components/sass/header.scss
+++ b/studiop-brath/src/components/sass/header.scss
@@ -1,31 +1,31 @@
-header{
+header {
   background-color: rgba(181, 0, 20, 1);
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 99;
-  .navigation-panel{
+  .navigation-panel {
     padding: 2em;
-    .subcontainer{
-      .navbar{
+    .subcontainer {
+      .navbar {
         display: flex;
         justify-content: flex-end;
         gap: 1em;
         align-items: center;
-        .navbarLogo{
+        .navbarLogo {
           position: absolute;
           left: 15%;
           top: 5%;
           z-index: 2;
         }
-        .navMenu{
+        .navMenu {
           display: flex;
           justify-content: space-around;
           align-items: flex-end;
           gap: 1em;
           list-style: none;
-          .nav-item{
-            .nav-link{
+          .nav-item {
+            .nav-link {
               text-decoration: none;
               font-weight: 700;
               color: #fff;
@@ -33,10 +33,10 @@ header{
           }
         }
 
-        .hamburger{
+        .hamburger {
           display: none;
           cursor: pointer;
-          .bar{
+          .bar {
             display: block;
             width: 25px;
             height: 3px;
@@ -46,7 +46,7 @@ header{
           }
         }
 
-        .download{
+        .download {
           display: flex;
           align-items: center;
           gap: 0.5em;
@@ -69,54 +69,52 @@ header{
     .maxWidth {
       max-width: 1200px;
       margin: 0 auto;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      gap: 0.3em;
     }
 
-    .themeToggle{
+    .themeToggle {
       padding: 0.5em;
       margin-left: 0.5em;
       border: 1px solid white;
-      background-color: #A62120;
+      background-color: #a62120;
       color: #fff;
       border-radius: 2em;
-      &:hover{
+      &:hover {
         cursor: pointer;
         background-color: white;
-        color: #A62120;
-        border: 1px solid #A62120;
+        color: #a62120;
+        border: 1px solid #a62120;
         transition: 1s ease-in-out;
       }
     }
   }
 }
 
-
-@media only screen and (max-width: 1550px){
-  header{
-    .navigation-panel{
-      .subcontainer{
-        .navbar{
-          .navbarLogo{
+@media only screen and (max-width: 1550px) {
+  header {
+    .navigation-panel {
+      .subcontainer {
+        .navbar {
+          .navbarLogo {
             left: 0;
           }
         }
       }
     }
-
-    .workTime{
-      //padding: 1.5em 0;
-      //text-align: center;
-    }
   }
 }
 
 @media only screen and (max-width: 1320px) {
-  header{
-    .navigation-panel{
-      .subcontainer{
-        .navbar{
+  header {
+    .navigation-panel {
+      .subcontainer {
+        .navbar {
           flex-direction: column;
-          .navMenu{
-            .nav-item{
+          .navMenu {
+            .nav-item {
               font-size: 0.85em;
             }
           }
@@ -124,39 +122,38 @@ header{
       }
     }
   }
-  
 }
 
-@media only screen and (max-width: 1180px){
-  header{
-    .navigation-panel{
+@media only screen and (max-width: 1180px) {
+  header {
+    .navigation-panel {
       padding: 1em;
-      .subcontainer{
-        .navbar{
+      .subcontainer {
+        .navbar {
           flex-direction: row;
           justify-content: end;
-          .navbarLogo{
+          .navbarLogo {
             left: 0;
             top: 0;
-            width: 15%;
+            width: 12%;
           }
-          .hamburger{
+          .hamburger {
             display: block;
           }
 
-          .hamburger.active .bar:nth-child(2){
+          .hamburger.active .bar:nth-child(2) {
             opacity: 0;
           }
 
-          .hamburger.active .bar:nth-child(1){
+          .hamburger.active .bar:nth-child(1) {
             transform: translateY(8px) rotate(45deg);
           }
 
-          .hamburger.active .bar:nth-child(3){
+          .hamburger.active .bar:nth-child(3) {
             transform: translateY(-8px) rotate(-45deg);
           }
 
-          .navMenu{
+          .navMenu {
             position: fixed;
             right: -120%;
             top: 45px;
@@ -166,15 +163,14 @@ header{
             background-color: rgba(181, 0, 20, 1);
             width: 100%;
             height: 60vh;
-            //text-align: center;
             transition: 0.3s;
 
-            .nav-item{
+            .nav-item {
               margin: 1em 0;
             }
           }
 
-          .navMenu.active{
+          .navMenu.active {
             right: 0;
           }
         }
@@ -183,32 +179,13 @@ header{
   }
 }
 
-@media only screen and (max-width: 1340px){
-  header{
-    .navigation-panel{
-      .subcontainer{
-        .navbar{
-          .navbarLogo{
-            left: 0;
-          }
-        }
-      }
-    }
-
-    .workTime{
-      //padding: 1.5em 0;
-      //text-align: center;
-    }
-  }
-}
-
-@media only screen and (max-width: 530px){
-  header{
-    .workTime{
+@media only screen and (max-width: 530px) {
+  header {
+    .workTime {
       padding: 1.5em 0;
       text-align: center;
       font-size: 0.8em;
-      .themeToggle{
+      .themeToggle {
         margin-top: 1em;
       }
     }
