--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,92 +1,109 @@
-footer{
-    background-color: #B50014;
+footer {
+  background-color: #b50014;
 
-    .container{
+  .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    .contact {
+      display: flex;
+      flex-direction: column;
+      gap: 0.7em;
+      .location {
         display: flex;
-        justify-content: space-around;
+        gap: 0.3em;
+        align-items: start;
+        color: #fff;
+      }
+
+      .displayProop {
+        display: flex;
+        gap: 0.3em;
         align-items: center;
+        color: #fff;
+      }
 
+      .phone:hover {
+        cursor: pointer;
+      }
 
-        .contact{
-            display: flex;
-            flex-direction: column;
-            gap: 0.7em;
-            .location{
-                display: flex;
-                gap: 0.3em;
-                align-items: start;
-                color: #fff;
-            }
-
-            .displayProop{
-                display: flex;
-                gap: 0.3em;
-                align-items: center;
-                color: #fff;
-            }
-        }
-
-        .social{
-            display: flex;
-            gap: 0.7em;
-            align-items: center;
-            .socialP{
-                font-size: 1em;
-                color: #fff;
-            }
-
-            .socialIcons{
-                display: flex;
-                gap: 0.5em;
-            }
-        }
+      .mail:hover {
+        cursor: pointer;
+      }
     }
 
-    .dimmedtrack{
+    .social {
+      display: flex;
+      gap: 0.7em;
+      align-items: center;
+      .socialP {
+        font-size: 1em;
+        color: #fff;
+      }
+
+
+
+      .socialIcons {
         display: flex;
-        justify-content: space-around;
-        background-color: rgba($color: #000000, $alpha: 0.5);
-        font-size: 12px;
-        color: rgba($color: #fff, $alpha: 0.5);
-        padding: 0.5em 0;
+        gap: 0.5em;
 
-        .studioPresent{
-            font-style: italic;
-            text-decoration: underline;
-            color: rgba($color: #fff, $alpha: 0.7);
+        &:hover {
+          cursor: pointer;
         }
-
+      }
     }
+  }
+
+  .dimmedtrack {
+    display: flex;
+    justify-content: space-around;
+    background-color: rgba($color: #000000, $alpha: 0.5);
+    font-size: 12px;
+    color: rgba($color: #fff, $alpha: 0.5);
+    padding: 0.5em 0;
+
+    .studioPresent {
+      font-style: italic;
+      text-decoration: underline;
+      color: rgba($color: #fff, $alpha: 0.7);
+
+      
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
 
-@media only screen and (max-width: 968px){
-    footer{
-        .container{
-            flex-direction: column;
-            gap: 5em;
+@media only screen and (max-width: 968px) {
+  footer {
+    .container {
+      flex-direction: column;
+      gap: 5em;
 
-            .contact{
-                padding-top: 2em;
-                align-items: center;
-                .location{
-                    text-align: center;
-                }
-                img{
-                    display: none;
-                }
-            }
-
-            .social{
-                flex-direction: column;
-                padding-bottom: 1.5em;
-            }
+      .contact {
+        padding-top: 2em;
+        align-items: center;
+        .location {
+          text-align: center;
         }
-
-        .dimmedtrack{
-            flex-direction: column;
-            align-items: center;
-            gap: 3em;
-            padding: 3em 0;
+        img {
+          display: none;
         }
+      }
+
+      .social {
+        flex-direction: column;
+        padding-bottom: 1.5em;
+      }
     }
+
+    .dimmedtrack {
+      flex-direction: column;
+      align-items: center;
+      gap: 3em;
+      padding: 3em 0;
+    }
+  }
 }
