--- a/sass/_grillkurs.scss
+++ b/sass/_grillkurs.scss
@@ -1,87 +1,84 @@
-.grillkurs{
-    display: flex;
-    background-color: #A62120;
+.grillkurs {
+  display: flex;
+  background-color: #a62120;
 
-    .grillleft{
-        color: #fff;
-        flex: 1;
-        align-self: center;
-        text-align: center;
-        .glTxt{
-            max-width: 250px;
-            margin: 0 auto;
-            text-align: start;
-            h2{
-                font-size: 2em;
-                padding-bottom: 1em;
-                line-height: 1.5em;
-            }
+  .grillleft {
+    color: #fff;
+    flex: 1;
+    align-self: center;
+    text-align: center;
+    .glTxt {
+      max-width: 250px;
+      margin: 0 auto;
+      text-align: start;
+      h2 {
+        font-size: 2em;
+        padding-bottom: 1em;
+        line-height: 1.5em;
+      }
 
-            ul{
-                li{
-                    font-size: 4px;
-                    line-height: 9em;
-                    .lItem{
-                        font-size: 4em;
-                        padding-left: 0.2em;
-                        font-weight: 300;
-                    }
-                }
-            }
-
-            .grillbtn{
-                border: 1px solid #FF0000;
-                border-radius: 2em;
-                padding: 0.7em 3em;
-                margin-top: 2em;
-                font-size: 1em;
-                background-color: #fff;
-                color: #000;
-            }
+      ul {
+        li {
+          font-size: 4px;
+          line-height: 9em;
+          .lItem {
+            font-size: 4em;
+            padding-left: 0.2em;
+            font-weight: 300;
+          }
         }
+      }
 
-
+      .grillbtn {
+        border: 1px solid #ff0000;
+        border-radius: 2em;
+        padding: 0.7em 3em;
+        margin-top: 2em;
+        font-size: 1em;
+        background-color: #fff;
+        color: #000;
+      }
     }
+  }
 
-    .grillright{
-        flex: 1;
-        justify-content: flex-end;
-        img{
-            display: block;
-            width: 100%;
-
-        }
+  .grillright {
+    flex: 1;
+    justify-content: flex-end;
+    img {
+      display: block;
+      width: 100%;
     }
+  }
 }
 
-@media only screen and (max-width: 1100px){
-    .grillkurs{
-        flex-direction: column;
-        padding-top: 3em;
+@media only screen and (max-width: 1100px) {
+  .grillkurs {
+    flex-direction: column;
+    padding-top: 3em;
 
-        .grillleft{
-            padding-bottom: 3em;
-        }
+    .grillleft {
+      padding-bottom: 3em;
     }
+  }
 }
 
-@media only screen and (max-width: 600px){
-    .grillleft{
-        align-self: center;
-        text-align: center;
-        .glTxt{
-            text-align: center !important;
-            h2{
-                font-size: 1.5em !important;
-            }
+@media only screen and (max-width: 600px) {
+  .grillleft {
+    align-self: center;
+    text-align: center;
+    .glTxt {
+      text-align: center !important;
+      h2 {
+        font-size: 1.5em !important;
+      }
 
-            ul{
-                li{
-                    .lItem{
-                        font-size: 3.5em;
-                    }
-                }
-            }
+      ul {
+        li {
+          .lItem {
+            font-size: 3.5em;
+          }
         }
-    }    
+      }
+    }
+  }
 }
