--- a/sass/_popUp.scss
+++ b/sass/_popUp.scss
@@ -1,68 +1,66 @@
-.popup{
-    position: fixed;
-    width: 30%;
-    top: 30%;
-    left: 35%;
-    background-color: #A62120;
+.popup {
+  position: fixed;
+  width: 30%;
+  top: 30%;
+  left: 35%;
+  background-color: #a62120;
+  color: #fff;
+  border-radius: 10px;
+  padding: 0.5em 1em;
+  z-index: 100;
+  text-align: center;
+  font-size: 1.5em;
+  -webkit-box-shadow: 0px 0px 21px 1px rgba(0, 0, 0, 0.35);
+  -moz-box-shadow: 0px 0px 21px 1px rgba(0, 0, 0, 0.35);
+  box-shadow: 0px 0px 21px 1px rgba(0, 0, 0, 0.35);
+
+  animation: entrance 0s ease 0s 1 normal forwards;
+  h2 {
+    padding-top: 1em;
+    text-transform: uppercase;
+    padding-bottom: 0.5em;
+  }
+
+  h6 {
+    padding-top: 5em;
+  }
+
+  button {
+    background-color: transparent;
+    font-size: 2em;
+    border: transparent;
     color: #fff;
-    border-radius: 10px;
-    padding: 0.5em 1em;
-    z-index: 100;
-    text-align: center;
-    font-size: 1.5em;
-    -webkit-box-shadow: 0px 0px 21px 1px rgba(0,0,0,0.35);
-    -moz-box-shadow: 0px 0px 21px 1px rgba(0,0,0,0.35);
-    box-shadow: 0px 0px 21px 1px rgba(0,0,0,0.35);
-
-    animation: entrance 0s ease 0s 1 normal forwards;
-    h2{
-        padding-top: 1em;
-        text-transform: uppercase;
-        padding-bottom: 0.5em;
-    }
-
-    h6{
-        padding-top: 5em;
-    }
-
-    button{
-        background-color: transparent;
-        font-size: 2em;
-        border: transparent;
-        color: #fff;
-        float: right;
-    }
-    display: none;
+    float: right;
+  }
+  display: none;
 }
 
-@media only screen and (max-width: 1024px){
-    .popup{
-
-        h2{
-            text-align: center;
-            padding-top: 3em;
-            font-size: 0.9em;
-        }
-
-        p{
-            font-size: 0.8em;
-        }
+@media only screen and (max-width: 1024px) {
+  .popup {
+    h2 {
+      text-align: center;
+      padding-top: 3em;
+      font-size: 0.9em;
     }
+
+    p {
+      font-size: 0.8em;
+    }
+  }
 }
 
-
-@media only screen and (max-width: 400px){
-    .popup{
-        width: 40%;
-    }
+@media only screen and (max-width: 400px) {
+  .popup {
+    width: 40%;
+  }
 }
 
 @keyframes entrance {
-	0% {
-		opacity: 0;
-	}
+  0% {
+    opacity: 0;
+  }
 
-	100% {
-		opacity: 1;
-	}
+  100% {
+    opacity: 1;
+  }
 }
