--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,36 +13,33 @@
 @import "lightMode";
 @import "popUp";
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  button:hover {
+    cursor: pointer;
+  }
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    button:hover{
-        cursor: pointer;
-    }
-
-    html{
-        scroll-behavior: smooth;
-    }
+  html {
+    scroll-behavior: smooth;
+  }
 }
 
-.cont{
-    max-width: 1320px;
-    margin: 0 auto;
+.cont {
+  max-width: 1320px;
+  margin: 0 auto;
 }
 
-.vonal{
+.vonal {
+  width: 80%;
+}
+
+.break {
+  text-align: center;
+  background-color: black;
+  img {
     width: 80%;
+  }
 }
-
-.break{
-    text-align: center;
-    background-color: black;
-    img{
-        width: 80%;
-    }
-}
-
-
